...

    Scaffold(
        modifier = Modifier.fillMaxSize().background(BackgroundBlack),
        positionIndicator = {
            PositionIndicator(
                scalingLazyListState = listState,
                modifier = Modifier.testTag("wear-scroll-indicator")
            )
        }
    ) {
        ScalingLazyColumn(
            state = listState,
            modifier = Modifier.fillMaxSize().testTag("wear-scroll-list"),
            horizontalAlignment = Alignment.CenterHorizontally,
            contentPadding = PaddingValues(top = 32.dp, bottom = 32.dp),
            content = content
        )
    }
}
...
